# deepseek-test

./: README.md  docker-compose.yaml  pyproject.toml
src/deepseek_py/: __init__.py
