[project]
name = "deepseek-py"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "openai>=1.60.2",
    "torch>=2.6.0",
    "transformers>=4.48.1",
    "ollama>=0.4.7",
    "accelerate>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.14.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/deepseek_py"]

[tool.rye.scripts]
run-deepseek = "python src/deepseek_py/__init__.py"
